--- a/src/html/yearView.html
+++ b/src/html/yearView.html
@@ -8,6 +8,7 @@
         p{
             display: inline-block;
             font-family: 'Lobster Two', cursive;
+            font-size: 27px;
 
         }
         /* Underline From Center */
