--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="">
 
 <!--table css from http://www.w3schools.com/css/css_table.asp-->
-
+<!-- background image from 7themes.com-->
 <head>
     <style>
         table {
@@ -81,7 +81,7 @@
             letter-spacing: -7px;
             font-weight:700;
             text-transform:uppercase;
-            animation:blur .75s ease-out infinite;
+            animation:blur 1.25s ease-out infinite;
             text-shadow:0px 0px 5px #fff,
             0px 0px 7px #fff;
         }
