--- a/src/html/dayView.html
+++ b/src/html/dayView.html
@@ -148,10 +148,8 @@ Event   &nbsp;
 
 <script type="text/javascript">
 
-    /*modification of table insertRow() method from w3schools.com
-    @summary creates a table of stored records for this day, executes a check to see if there are any
-    *saved records for that day by looping through the 24 hours of the day and accessing local storage.
-    *
+/*
+@summary creates a table of stored records for this day, executes a check to see if there are any saved records for that day by looping through the 24 hours of the day and accessing local storage.
      */
     function tableCreate()
     {
@@ -281,9 +279,8 @@ Event   &nbsp;
     } , false);
 
     /*
-    *@summary creates a table of stored records for this day, executes a check to see if there are any
-    *saved records for that day by looping through the 24 hours of the day and accessing local storage.
-    **@return alerts user either of deletion failure or success
+    *@summary creates a table of stored records for this day, executes a check to see if there are any saved records for that day by looping through the 24 hours of the day and accessing local storage.
+    *@return alerts user either of deletion failure or success
     */
     document.getElementById("delete").addEventListener("click", function ()
     {
